Added links to new pages

--- a/ConsumeAPI.html
+++ b/ConsumeAPI.html
@@ -20,26 +20,40 @@
         </div>
     </header>
     <main>
-        Consuming an API
-Breif Summary Of an API:
-Application Programming Interface. This is the way that data is going to be shared. This can be in the same program or between multiple programs.  You can write your own or consume someone else's API. PReviously I have shown how to write a simple REST API but now I will talk about using someone else's API.
+        <p>
+            Consuming an API
+            Breif Summary Of an API:
+            Application Programming Interface. This is the way that data is going to be shared. This can be in the same
+            program or between multiple programs. You can write your own or consume someone else's API. PReviously I
+            have shown how to write a simple REST API but now I will talk about using someone else's API.
 
-Why would I need to use someone else's API.
-This is a serious question. WHY WOULD I USE SOMEONE ELSE'S API? Well I think the answer is time and speed. You can always try to do everything yourself. You could write what someone else already has or you can stand on the shoulders of giants.
+            Why would I need to use someone else's API.
+            This is a serious question. WHY WOULD I USE SOMEONE ELSE'S API? Well I think the answer is time and speed.
+            You can always try to do everything yourself. You could write what someone else already has or you can stand
+            on the shoulders of giants.
 
-Basic how to.
-Depending on the api you want to use it may have specific rules to follow. BUt the basics are all the same. You need a way to ask questions and respond to the api. Normally you will need to send a specific request that you want answered and that it can answer. Then it will respond with the answer if it can. If it can't you will get an error and hopefully the error will give you information as to why it couldn't give you an answer. 
-For my projects using node.js I use a library called anxious to make the call to the API. 
+            Basic how to.
+            Depending on the api you want to use it may have specific rules to follow. BUt the basics are all the same.
+            You need a way to ask questions and respond to the api. Normally you will need to send a specific request
+            that you want answered and that it can answer. Then it will respond with the answer if it can. If it can't
+            you will get an error and hopefully the error will give you information as to why it couldn't give you an
+            answer.
+            For my projects using node.js I use a library called anxious to make the call to the API.
 
-Struggles/ pitfalls.
-Struggles. Many API’s you have to pay for. Others will put a limit on how often you can access them. SOme of them require a secret token to use. I think the hardest thing about them is knowing how to send the request and in what form it will respond.
-The biggest worry I have is when an API is changed. When the api is changed i can break how your program communicates with it. This can happen at any time. Try to think of ways of protecting against this. What Kind of telemetry would you use?
+            Struggles/ pitfalls.
+            Struggles. Many API’s you have to pay for. Others will put a limit on how often you can access them. SOme of
+            them require a secret token to use. I think the hardest thing about them is knowing how to send the request
+            and in what form it will respond.
+            The biggest worry I have is when an API is changed. When the api is changed i can break how your program
+            communicates with it. This can happen at any time. Try to think of ways of protecting against this. What
+            Kind of telemetry would you use?
 
-Summary
-API’s are meant to be a promise that if you send something in the correct way you will get something back. It will save time and probably money. 
+            Summary
+            API’s are meant to be a promise that if you send something in the correct way you will get something back.
+            It will save time and probably money.
 
-Have Fun and Program On.
-
+            Have Fun and Program On.
+        </p>
     </main>
     <footer>
 
