--- a/Git.html
+++ b/Git.html
@@ -20,52 +20,80 @@
         </div>
     </header>
     <main>
-        Git Tutorial:
-Git is a source code version control system.
-Now what does this mean? Git is a way to manage source code for individuals and groups. It lets you know about every change that has been made to the code you are working on with notes (if you choose to add them) about the code. 
+        <p>
+            Git Tutorial:
+            Git is a source code version control system.
+            Now what does this mean? Git is a way to manage source code for individuals and groups. It lets you know
+            about every change that has been made to the code you are working on with notes (if you choose to add them)
+            about the code.
 
-Why should You use Git?
-Have you thought of the problem of making a change to your code and needing to go back to what you have. What about wanting to try something that you don't know will work. What if you are working with a group of people with each person making changes to the code. What are you going to do to make this less painful?
-Git tracks all of the pushed changes to your code. This means that if you decide you don't like the code you wrote you can go back to anytime you committed the code. This helps remove the fear of making changes to your code.
-I remember when I first started coding. I didn't know about git at all. So my solution to this was that I made a new copy of my code then worked only on this copy for the day. I did this and saved all the files onto a thumb drive.The problem I had was that I would forget what version I was on or what changes were made. I also couldn't work with others on any of these projects at the same time.
-Now can you imagine trying to work with another person using this system I came up with. Only one of us would be able to work at a time. Then when you get control again i wouldn't know what changes were made. What if we both made a copy then worked on those copies at the same time. How would we put the two copies together?
-The solution to all these problems I pointed out is to use git. 
-Who uses git?
-Git is the de facto source control for most businesses and individuals who work with code. This means that if you know git you can work with almost anyone else because they will probably use git for their version control.
- I use Git for my personal projects for class projects and for working with others.
-How do You use git?
-The main things you need to know about to use git are the commands: git clone, git pull, git push, git add ,git checkout, git branch,and git merge. As you use git you will learn a few other commands but this set of 7 will do almost everything
-git clone:
-This is the command to copy a different repo 
+            Why should You use Git?
+            Have you thought of the problem of making a change to your code and needing to go back to what you have.
+            What about wanting to try something that you don't know will work. What if you are working with a group of
+            people with each person making changes to the code. What are you going to do to make this less painful?
+            Git tracks all of the pushed changes to your code. This means that if you decide you don't like the code you
+            wrote you can go back to anytime you committed the code. This helps remove the fear of making changes to
+            your code.
+            I remember when I first started coding. I didn't know about git at all. So my solution to this was that I
+            made a new copy of my code then worked only on this copy for the day. I did this and saved all the files
+            onto a thumb drive.The problem I had was that I would forget what version I was on or what changes were
+            made. I also couldn't work with others on any of these projects at the same time.
+            Now can you imagine trying to work with another person using this system I came up with. Only one of us
+            would be able to work at a time. Then when you get control again i wouldn't know what changes were made.
+            What if we both made a copy then worked on those copies at the same time. How would we put the two copies
+            together?
+            The solution to all these problems I pointed out is to use git.
+            Who uses git?
+            Git is the de facto source control for most businesses and individuals who work with code. This means that
+            if you know git you can work with almost anyone else because they will probably use git for their version
+            control.
+            I use Git for my personal projects for class projects and for working with others.
+            How do You use git?
+            The main things you need to know about to use git are the commands: git clone, git pull, git push, git add
+            ,git checkout, git branch,and git merge. As you use git you will learn a few other commands but this set of
+            7 will do almost everything
+            git clone:
+            This is the command to copy a different repo
 
-git pull:
-Git pull tells git to get you the most recent code to work on. It is a good idea to do this before you start working on any code. It will make sure that you have the most up to date code.
+            git pull:
+            Git pull tells git to get you the most recent code to work on. It is a good idea to do this before you start
+            working on any code. It will make sure that you have the most up to date code.
 
-git add .:
-This is the command to tell git to remember all of the changes you have made up to this point. The command is read as git add all.
+            git add .:
+            This is the command to tell git to remember all of the changes you have made up to this point. The command
+            is read as git add all.
 
-git commit -m “message “:
-This is the command to say make commit with all of the changes that i have made. It saves all the changes. The message portion is something you add that lets you add notes or comments about the 
+            git commit -m “message “:
+            This is the command to say make commit with all of the changes that i have made. It saves all the changes.
+            The message portion is something you add that lets you add notes or comments about the
 
-git push:
-This tells git that you want to store the commit someplace other than on your computer. Often you will push to github which is an online repository.
+            git push:
+            This tells git that you want to store the commit someplace other than on your computer. Often you will push
+            to github which is an online repository.
 
- git branch “branchname”:
-This is the command to make a new copy of the code that can be worked on separated from the main code that everyone else will use. The branch name is something you give when you create the branch. The main branch is normally called master.
+            git branch “branchname”:
+            This is the command to make a new copy of the code that can be worked on separated from the main code that
+            everyone else will use. The branch name is something you give when you create the branch. The main branch is
+            normally called master.
 
-git checkout “ branch name”:
-This is the command to work on an existing branch. So if you have been working on branch api and want to work on branch logic this is the command to use.
+            git checkout “ branch name”:
+            This is the command to work on an existing branch. So if you have been working on branch api and want to
+            work on branch logic this is the command to use.
 
-git merge “branch” “branch”
-This is the command to put your branches changes with other branches changes. The two branches are merged together into one. This can be hard when working with others. It is a good idea to merge often into main or master.
+            git merge “branch” “branch”
+            This is the command to put your branches changes with other branches changes. The two branches are merged
+            together into one. This can be hard when working with others. It is a good idea to merge often into main or
+            master.
 
-All of these commands are used in the terminal. There are gui’s for using git but I personally mostly use the Terminal.
+            All of these commands are used in the terminal. There are gui’s for using git but I personally mostly use
+            the Terminal.
 
-Concerns about using git.
-Git is hard for many people to learn to use. It is robust with many more things than what I showed how to use. 
+            Concerns about using git.
+            Git is hard for many people to learn to use. It is robust with many more things than what I showed how to
+            use.
 
-Find more information about git at https://www.atlassian.com/git/tutorials
-
+            Find more information about git at https://www.atlassian.com/git/tutorials
+        </p>
     </main>
     <footer>
 
