--- a/MySkills.html
+++ b/MySkills.html
@@ -46,6 +46,12 @@
                     <p>I wrote a simple Api that cakks another Api. (The Chuck Norris Joke Api)</p>
                 </li>
                 <li>
+                    <a href="ConsumeAPI.html">
+                        <h3>Web Services(SOAP, REST, microservices, DDD)</h3>
+                    </a>
+                    <p>I Show How to consume someone elses API.</p>
+                </li>
+                <li>
                     <a href="Triangualr.html">
                         <h3>Object-oriented principles</h3>
                     </a>
@@ -64,7 +70,7 @@
                     <p>This Webstite is All HTML and CSS as of right now. I Plan on Adding Javascript soon.</p>
                 </li>
                 <li>
-                    <a href="gitExperience.html">
+                    <a href="Git.html">
                         <h3>Experience with GIT</h3>
                     </a>
                     <p>Each project I do has a git repo. This helps me keep track of what I have done and try things on
@@ -79,13 +85,23 @@
                     </p>
                 </li>
                 <li>
+                    <a href="Moq.html">
+                        <h3>Moq to Test Code</h3>
+                    </a>
+                    <p>You need to test all of your code. WHat do you do when you dont have access to everything you
+                        need to test?
+                    </p>
+                </li>
+                <li>
                     <h3>WordPress</h3>
                     <p>I have made wordpress websites for a needpoint business.</p>
                 </li>
                 <li>
-                    <h3>Visual Studio</h3> 
-                    <p>For most of my projects I use Visual studios. It is nice because of all the templetes it
-                        provides.</p>
+                    <a href="VisualStudio.html">
+                        <h3>Visual Studio</h3> 
+                        <p>For most of my projects I use Visual studios. It is nice because of all the templetes it
+                            provides.</p>
+                    </a>
                 </li>
                 <li>
                     <h3>Distributed systems</h3>
