--- a/VisualStudio.html
+++ b/VisualStudio.html
@@ -20,31 +20,52 @@
         </div>
     </header>
     <main>
-        Visual Studio
-What Is Visual Studio?
-Visual Studio is an IDE developed by Microsoft. An IDE is an integrated Development Environment. This is a tool that tries to give developers all of the tools they need in one place. This is normally helpful to make development fast.
+        <p>
+            Visual Studio
+            What Is Visual Studio?
+            Visual Studio is an IDE developed by Microsoft. An IDE is an integrated Development Environment. This is a
+            tool that tries to give developers all of the tools they need in one place. This is normally helpful to make
+            development fast.
 
-What Is It Used For?
-An IDE is meant to help developers be more productive. The hope is that by having everything local they will be able to do the work faster. I think we can think of VIsual Studio as a woodworking toolbox. You fill the toolbox with the most common and likely tools that you will need to complete the project you are working on. THis helps prevent you from needing to run around and find the specific tool because you already know where the tool will be at. The problem may arise where the tool is not in your toolbox and you need to go find it. This slows you down but now you can add that tool to the toolbox so that you don't need to go find it again.
-Modern Visual studio is like this toolbox. It has what you hope are all the tools that you will need and most of the time it seems to have all of them. Sometimes you will have to find a new tool and with the architecture of visual studio you can often add that tool to Visual Studio.
-Something more that Visual Studio allows is that it can do a lot of scaffolding for the developer. This means that if I want to make a web app visual studio will give me the needed startup code to get an app up and running. This can save tons of time but don't expect the generated code to be what you will end up with. You still need to make changes to it to fit your needs.
+            What Is It Used For?
+            An IDE is meant to help developers be more productive. The hope is that by having everything local they will
+            be able to do the work faster. I think we can think of VIsual Studio as a woodworking toolbox. You fill the
+            toolbox with the most common and likely tools that you will need to complete the project you are working on.
+            THis helps prevent you from needing to run around and find the specific tool because you already know where
+            the tool will be at. The problem may arise where the tool is not in your toolbox and you need to go find it.
+            This slows you down but now you can add that tool to the toolbox so that you don't need to go find it again.
+            Modern Visual studio is like this toolbox. It has what you hope are all the tools that you will need and
+            most of the time it seems to have all of them. Sometimes you will have to find a new tool and with the
+            architecture of visual studio you can often add that tool to Visual Studio.
+            Something more that Visual Studio allows is that it can do a lot of scaffolding for the developer. This
+            means that if I want to make a web app visual studio will give me the needed startup code to get an app up
+            and running. This can save tons of time but don't expect the generated code to be what you will end up with.
+            You still need to make changes to it to fit your needs.
 
-Why Should I Use It?
-So Why use Visual Studio? It has most of the things you as the developer will need. Another reason is that it is supported by Microsoft. This means that they are keeping it up to date. They are adding new features and it is available with a free version. 
-What Are some of the ways to use it/ techniques?
-So the first thing you need to do is download Visual Studios. To do this go to https://visualstudio.microsoft.com/downloads/
-And download the community version.
-This will take some time and some space because it is a large program because it tries to have everything.
-Once it is downloaded run Visual Studio and you will be given the option to create a new project.We will create a new project
-Give the project a name. We will leave ours as the default name.
-We then get to choose a template. You can always choose no template as well. WE will do an mvc template.
-It will then scaffold the project that you want to use. And you are ready to start programming.
-What are the alternatives?
-There are many alternatives to VIsual Studio. You can use Eclipse, netbeans, codeblocks and many others. These other IDE’s are normally language specific though. YOu can also use text editors and your terminal. The one I use the most is vs code. THis is a lightweight text editor. You need to know more about building projects and using the terminal if you want to use other text editors. T
-Summary
-An IDE can make programming faster. It can make it so you don't need to worry about all of the little details. I think it is important to use both an IDE and the terminal. There will be needs for both cases.
-Have Fun and Program On.
-
+            Why Should I Use It?
+            So Why use Visual Studio? It has most of the things you as the developer will need. Another reason is that
+            it is supported by Microsoft. This means that they are keeping it up to date. They are adding new features
+            and it is available with a free version.
+            What Are some of the ways to use it/ techniques?
+            So the first thing you need to do is download Visual Studios. To do this go to
+            https://visualstudio.microsoft.com/downloads/
+            And download the community version.
+            This will take some time and some space because it is a large program because it tries to have everything.
+            Once it is downloaded run Visual Studio and you will be given the option to create a new project.We will
+            create a new project
+            Give the project a name. We will leave ours as the default name.
+            We then get to choose a template. You can always choose no template as well. WE will do an mvc template.
+            It will then scaffold the project that you want to use. And you are ready to start programming.
+            What are the alternatives?
+            There are many alternatives to VIsual Studio. You can use Eclipse, netbeans, codeblocks and many others.
+            These other IDE’s are normally language specific though. YOu can also use text editors and your terminal.
+            The one I use the most is vs code. THis is a lightweight text editor. You need to know more about building
+            projects and using the terminal if you want to use other text editors. T
+            Summary
+            An IDE can make programming faster. It can make it so you don't need to worry about all of the little
+            details. I think it is important to use both an IDE and the terminal. There will be needs for both cases.
+            Have Fun and Program On.
+        </p>
     </main>
     <footer>
 
