--- a/Moq.html
+++ b/Moq.html
@@ -20,18 +20,30 @@
         </div>
     </header>
     <main>
-        Moq:
-What is Moqing?
-Moqiing is used to test your code. SOmetimes you don't have access to everything you need to test your code. So does this mean you should not test it? No. It just means you need to figure out what you think you would get from the things you don't have access to put them into an object and supply this to you code as if it came from the source. Sounds simple right. Most of the time it is.
+        <p>
+            Moq:
+            What is Moqing?
+            Moqiing is used to test your code. SOmetimes you don't have access to everything you need to test your code.
+            So does this mean you should not test it? No. It just means you need to figure out what you think you would
+            get from the things you don't have access to put them into an object and supply this to you code as if it
+            came from the source. Sounds simple right. Most of the time it is.
 
-Why should I Moq:
-You moq so that you now your code is working the way you expect it to be working. At work I have been working with an API. I have really struggled to work with this api properly. FOr a long TIme I thought it was probably because I wasn't working with the API right or that My code was behaving wrong. So I decided to moq what I expected front the API. This helped me to know that the problem was not my code but that the API was not allowed requests from My development environment. SHortly after moqing I was able to prove to those that I work with that the problem was the API and not my code.
-Downside Of Moq:
-Moqing fixes many testing problems. I think it helps find problems and prove your code. The problem comes when you don't know what to moq or what the moq should look like. This can cause you to program incorrectly because your assumptions were wrong.
-Summary:
-Just Because it can be wrong doesn't mean you shouldn't moq. It will at least prove that what your working on performs as expected.
-Have Fun and Program On.
-
+            Why should I Moq:
+            You moq so that you now your code is working the way you expect it to be working. At work I have been
+            working with an API. I have really struggled to work with this api properly. FOr a long TIme I thought it
+            was probably because I wasn't working with the API right or that My code was behaving wrong. So I decided to
+            moq what I expected front the API. This helped me to know that the problem was not my code but that the API
+            was not allowed requests from My development environment. SHortly after moqing I was able to prove to those
+            that I work with that the problem was the API and not my code.
+            Downside Of Moq:
+            Moqing fixes many testing problems. I think it helps find problems and prove your code. The problem comes
+            when you don't know what to moq or what the moq should look like. This can cause you to program incorrectly
+            because your assumptions were wrong.
+            Summary:
+            Just Because it can be wrong doesn't mean you shouldn't moq. It will at least prove that what your working
+            on performs as expected.
+            Have Fun and Program On.
+        </p>
     </main>
     <footer>
 
