added the agile story

--- a/Git.html
+++ b/Git.html
@@ -20,6 +20,13 @@
         </div>
     </header>
     <main>
+        <br>
+        <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
+        <div class="card">
         <p>
             Git Tutorial:
             Git is a source code version control system.
@@ -94,6 +101,7 @@
 
             Find more information about git at https://www.atlassian.com/git/tutorials
         </p>
+    </div>
     </main>
     <footer>
 
