--- a/Moq.html
+++ b/Moq.html
@@ -20,6 +20,13 @@
         </div>
     </header>
     <main>
+        <br>
+        <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
+        <div class="card">
         <p>
             Moq:
             What is Moqing?
@@ -44,6 +51,7 @@
             on performs as expected.
             Have Fun and Program On.
         </p>
+    </div>
     </main>
     <footer>
 
