--- a/MySkills.html
+++ b/MySkills.html
@@ -22,16 +22,22 @@
     <main>
         <br>
         <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
         <div class="skills">
             <ul>
                 <li>
-                    <a href="netCore.html">
-                        <h3>C#/.NET Core/.Net</h3>
-                    </a>
-                    <p>This is a messaging app that is in progress.</p>
+                    <div class=card>
+                        <a href="netCore.html">
+                            <h3>C#/.NET Core/.Net</h3>
+                        </a>
+                        <p>This is a messaging app that is in progress.</p>
+                    </div>
                 </li>
                 <li>
                     <a href="TDD.html">
@@ -119,10 +125,13 @@
                         projects.</p>
                 </li>
                 <li>
-                    <h3>Agile Experience</h3>
-                    <p>Every Porject I do for school is a lesson in Agile programing.</p>
+                    <a href="Agile.html">
+                        <h3>Agile Experience</h3>
+                        <p>Every Porject I do for school is a lesson in Agile programing.</p>
+                    </a>
                 </li>
                 <li>
+
                     <h3>Prototyping</h3>
                     <p>This is what I really like to do. It allows me to just try things and experiment. It is nice
                         because I know that i dont have to be perfect the first time threw. I can just try. It is
