--- a/TDD.html
+++ b/TDD.html
@@ -20,26 +20,40 @@
         </div>
     </header>
     <main>
-        <div>TDD
-            What is TDD
-            TDD ruleset
-            No production code without a failing test
-            No test is more than what will cause it to fail
-            No more production code than is needed to pass the test
-            Why Use TDD
-                TDD leads to flexible code. This means that the code base can be changed without fear of destroying your program. 
-            It allows people to experiment and try new things without affecting everything else created.
-            It shows you where something has broken and helps you figure out where to fix the problem.
-            It can help you be confident in your code working as expected.
-            Fast example of TDD.
+        <br>
+        <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
+        <div class="card">
+            <h1>TDD</h1>
+            <h2>What is TDD</h2>
+            <h3>TDD ruleset</h3>
+            <ul>
+                <li>No production code without a failing test</li>
+                <li>No test is more than what will cause it to fail</li>
+                <li>No more production code than is needed to pass the test</li>
+            </ul>
+            <h2>Why Use TDD</h2>
+            <p>TDD leads to flexible code. This means that the code base can be changed without fear of destroying your
+                program.
+                It allows people to experiment and try new things without affecting everything else created.
+                It shows you where something has broken and helps you figure out where to fix the problem.
+                It can help you be confident in your code working as expected.
+            </p>
+            <h2>Fast example of TDD.</h2>
             Red green refactor
-            
-            Extra use of TDD
-            It helps you understand existing code or purchased code.
-            To learn a codebase, write tests to figure out how the code works. Keep this around so that if the code is changed you can know if it will break your code when you run the tests.
-            For more resources look to Clean code: A handbook of Agile Software Craftsmanship
-            </div>
-        
+
+            <h2>Extra use of TDD</h2>
+            <p>It helps you understand existing code or purchased code.
+                To learn a codebase, write tests to figure out how the code works. Keep this around so that if the code
+                is
+                changed you can know if it will break your code when you run the tests.
+                For more resources look to Clean code: A handbook of Agile Software Craftsmanship
+            </p>
+        </div>
+
     </main>
     <footer>
 
