--- a/Triangualr.html
+++ b/Triangualr.html
@@ -20,7 +20,13 @@
         </div>
     </header>
     <main>
-        <div>Triangular (Java, TDD Example and well designed project)
+        <br>
+        <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
+        <div class="card">Triangular (Java, TDD Example and well designed project)
             This is a game idea that I have. I want it to take the principle of triangularization to find a position. It will be a simple puzzle game. 
             I have created some simple requirements. I am keeping artifacts to the minimum. 
             It is going to be written in Java. 
