--- a/netCore.html
+++ b/netCore.html
@@ -22,33 +22,38 @@
     <main>
         <br>
         <br>
+        <br>
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
         <div class="skills">
             <ul>
-                <li>
-                    <h3>C#/.NET Core/.Net</h3>
-                    <p>//I am taking another course to help give me projects in asp.net and .Net Core. Eache week I will
-                        do a new project using this tech stack.</p>
-                    <div class="ASP">
-                        <div class="ASP_Clone">
-                            <h4>Currently I am working on a Patrion clone.</h4>
-                            <img src="Pics\EmptyBlogPage.png">
-                            <img src="Pics\AddBlog.png">
+                <div class="card">
+                    <li>
+                        <h3>C#/.NET Core/.Net</h3>
+                        <p>//I am taking another course to help give me projects in asp.net and .Net Core. Eache week I
+                            will
+                            do a new project using this tech stack.</p>
+                        <div class="ASP">
+                            <div class="ASP_Clone">
+                                <h4>Currently I am working on a Patrion clone.</h4>
+                                <img src="Pics\EmptyBlogPage.png">
+                                <img src="Pics\AddBlog.png">
+                            </div>
+                            <div class="ASP_Comments_Categories">
+                                <h4>I have started with blog posts with comments and categories.</h4>
+                                <img src="Pics\AddCommentsAndAddCategoriedToBlog.png">
+                                <img src="Pics\BlogWithCommetnAndCategories.png">
+                            </div>
+                            <div class="ASP_Many_To_Many">
+                                <h4>This shows my use of databases, Efcore, one to many and many to many relationships
+                                    in
+                                    asp.net.</h4>
+                                <img src="Pics\ManyToMany.png">
+                            </div>
                         </div>
-                        <div class="ASP_Comments_Categories">
-                            <h4>I have started with blog posts with comments and categories.</h4>
-                            <img src="Pics\AddCommentsAndAddCategoriedToBlog.png">
-                            <img src="Pics\BlogWithCommetnAndCategories.png">
-                        </div>
-                        <div class="ASP_Many_To_Many">
-                            <h4>This shows my use of databases, Efcore, one to many and many to many relationships in
-                                asp.net.</h4>
-                            <img src="Pics\ManyToMany.png">
-                        </div>
-                    </div>
-                </li>
+                    </li>
+                </div>
             </ul>
         </div>
     </main>
