--- a/node.html
+++ b/node.html
@@ -20,17 +20,25 @@
         </div>
     </header>
     <main>
-        <div>Node.Js
-            I was hired to work on changing apps from php to node.js with react front ends. 
-            I did not know php, react or node.js. 
+        <br>
+        <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
+        <div class="card">
+            Node.Js
+            I was hired to work on changing apps from php to node.js with react front ends.
+            I did not know php, react or node.js.
             I had some knowledge of javascript.
             Before my first day I started following tutorials on react and node.js.
             My first day at work they told me they decided to use Vue instead of react.
             So I spent a day learning Vue and understanding the framework. I think it is simple.
             I used this site as a resource to learn Vue. https://vuejs.org/v2/guide/components.html
             I made some test vue apps to practice using vue.
-            I then started working on the actual project. It was already a framework but we found that it was not planned very well. 
-            </div>
+            I then started working on the actual project. It was already a framework but we found that it was not
+            planned very well.
+        </div>
     </main>
     <footer>
 
