--- a/webApi.html
+++ b/webApi.html
@@ -22,48 +22,55 @@
     <main>
         <br>
         <br>
+        <br>
         <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
         <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
         </h2>
-        <div class="skills">
-            <p>I wrote a simple Api that wraps another Api. (The Chuck Norris Joke Api)</p>
         </div>
-        <div class="story">
-            <p>In the World of programming communication between software is always something to consider.
-                The way we accomplish this is by using API.
-                Application Programming Interface.
-                This is the way that a program or part of a program has agreed to receive requests for Data and the way
-                they will return the requested Data. </p>
-        </div>
-        <div class="explain">
-            <p>We have seen many different types of API’s designs. The ones I have most often seen are REST, and RPC.
-                Each has their own standards and definitions as to what makes them work.
+        <div class="card">
+            <div class="skills">
+                <p>I wrote a simple Api that wraps another Api. (The Chuck Norris Joke Api)</p>
+            </div>
+            <div class="story">
+                <p>In the World of programming communication between software is always something to consider.
+                    The way we accomplish this is by using API.
+                    Application Programming Interface.
+                    This is the way that a program or part of a program has agreed to receive requests for Data and the
+                    way
+                    they will return the requested Data. </p>
+            </div>
+            <div class="explain">
+                <p>We have seen many different types of API’s designs. The ones I have most often seen are REST, and
+                    RPC.
+                    Each has their own standards and definitions as to what makes them work.
 
-                I use REST for most of my work. This is nice because it allows me to rely on HTTP.
-                Most of the time it uses GET and POST Requests.
-            </p>
-        </div>
-        <div class="process">
-            <p>I have made a simple API that wraps another API “ The Chuck Norris Joke API” to return a random joke</p>
-            <img src="Pics\ReturnedJokeFromApi.PNG">
-            <p>I used the Template from Visual Studio to scaffold out an ASP.net API. This gives us a working
-                API to gather weather data.
-            </p>
-            <img src="Pics\APIScaffold.PNG">
-            <p>
-                I then changed the existing code to create a http client. 
-            </p>
-            <img src="Pics\GetJoke.PNG">
-            <p>
-                I set the base url to call the existing API format.  
-            </p>
-            <p>I then added any special requirements to the url.</p>
-            <p>I make the call to the other API.</p>
-            <p>This Api returns the data as json.</p>
-            <p>I have to parse this data and store it in an object.</p>
-            <p>I then format the Data I received and return it back with just the joke to the user.</p>
-            <img src="Pics\ReturnedJokeFromApi.PNG">
+                    I use REST for most of my work. This is nice because it allows me to rely on HTTP.
+                    Most of the time it uses GET and POST Requests.
+                </p>
+            </div>
+            <div class="process">
+                <p>I have made a simple API that wraps another API “ The Chuck Norris Joke API” to return a random joke
+                </p>
+                <img src="Pics\ReturnedJokeFromApi.PNG">
+                <p>I used the Template from Visual Studio to scaffold out an ASP.net API. This gives us a working
+                    API to gather weather data.
+                </p>
+                <img src="Pics\APIScaffold.PNG">
+                <p>
+                    I then changed the existing code to create a http client.
+                </p>
+                <img src="Pics\GetJoke.PNG">
+                <p>
+                    I set the base url to call the existing API format.
+                </p>
+                <p>I then added any special requirements to the url.</p>
+                <p>I make the call to the other API.</p>
+                <p>This Api returns the data as json.</p>
+                <p>I have to parse this data and store it in an object.</p>
+                <p>I then format the Data I received and return it back with just the joke to the user.</p>
+                <img src="Pics\ReturnedJokeFromApi.PNG">
 
+            </div>
         </div>
     </main>
     <footer>
