--- a/pythonExperience.html
+++ b/pythonExperience.html
@@ -20,6 +20,13 @@
         </div>
     </header>
     <main>
+        <br>
+        <br>
+        <br>
+        <h2>Email: <a href="mailto:Kaydon.Stubbs@gmail.com">Kaydon.Stubbs@gmail.com</a></h2>
+        <h2>LinkedIn: <a href="https://www.linkedin.com/in/kaydon-stubbs-7aa7311b7/">Kaydon Stubbs</a>
+        </h2>
+        <div class="card"
         
     </main>
     <footer>
